[tool.poetry]
name = "pibooking"
version = "0.1.0"
description = "📒🏋 Unofficial Python client for the iBooking web API"
keywords = ["ibooking", "api-client", "unofficial"]
authors = ["mathiazom"]
readme = "README.md"
homepage = "https://github.com/mathiazom/pibooking"
repository = "https://github.com/mathiazom/pibooking"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mathiazom/pibooking/issues"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
